--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html --out-dir docs",
-    "build": "parcel build index.html --out-dir docs --public-url ./"
+    "build": "rm -rf docs && parcel build index.html --out-dir docs --public-url ./"
   },
   "author": "",
   "license": "ISC",
